# ros-task

scripts/deploy/: app.sh  devel.sh  start.sh
workspace/limo_control/: CMakeLists.txt  package.xml
workspace/limo_control/launch/: limo_complete.launch.py
workspace/limo_control/limo_controller/: limo_controller_node.cpp  limo_controller_node.hpp
